Fixed the aligned to .modal__btn

--- a/css/main.css
+++ b/css/main.css
@@ -656,6 +656,7 @@ button.header__button {
 }
 @media (min-width: 1200px) {
   .modal__btn {
+    margin: unset;
     display: unset;
   }
 }
