--- a/sass/sections/_modal.sass
+++ b/sass/sections/_modal.sass
@@ -3,8 +3,9 @@
 	display: block
 
 	@media (min-width: 1200px)
+		margin: unset
 		display: unset
-		
+
 .modal-window
 	position: fixed
 	top: 0
